--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,44 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.custom-buttons {
+  border: 0;
+  background: transparent;
+  color: #212529 !important;
+  margin: 12px 24px;
+
+  /* border-radius: 20px; */
+}
+
+/* .custom-buttons.active {
+  border-bottom: 3px solid #198754;
+  color: #198754 !important;
+} */
+
+.custom-buttons.active {
+  border: 1px solid #dcd6dbb1; /* Set border for all sides */
+  padding: 20;
+  border-radius: 15px; /* Add rounded corners */
+  box-shadow: 0px 0px 15px rgba(58, 241, 235, 0.5); /* Light yellow shadow */
+  color: #080808 !important;
+}
+
+.image-box {
+  transition: 0.2s;
+}
+
+.image-box:hover {
+  box-shadow: 0 0 5px #000;
+  transform: scale(1.05);
 }
